--- a/app/src/main/res/layout/filter_item.xml
+++ b/app/src/main/res/layout/filter_item.xml
@@ -4,6 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/border"
     android:padding="10dp"
     android:layout_weight="10"
     android:layout_gravity="center">
@@ -23,7 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:textSize="20sp"
+        android:clickable="true"
+        android:textSize="16sp"
         android:textColor="@color/color_primary"
         android:text="@string/reset_filters"/>
 
